--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "core-js": "^3.6.5",
     "firebase": "^7.15.1",
     "vue": "^2.6.11",
+    "vue-chartless": "^0.1.23",
     "vue-router": "^3.2.0",
     "vuetify": "^2.2.11",
     "vuex": "^3.4.0"
