--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,6 +21,7 @@ jobs:
           npm install
           npm run lint
           npm run build
+          firebase deploy
       - uses: stefanzweifel/git-auto-commit-action@v3.0.0
         with:
           commit_message: Apply GitHub actions.
