--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,3 +25,13 @@ jobs:
         with:
           commit_message: Apply GitHub actions.
           ref: ${{ github.head_ref }}
+    steps:
+      - name: Checkout the repository
+        uses: actions/checkout@master
+
+      - name: Deploy to Firebase
+        uses: w9jds/firebase-action@master
+        with:
+          args: deploy
+        env:
+          FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
