--- a/firebase.json
+++ b/firebase.json
@@ -7,7 +7,7 @@
     "rewrites": [
       {
         "source": "**",
-        "destination": "./public/index.html"
+        "destination": "/index.html"
       }
     ],
     "public": "dist",
