--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "chart.js": "^2.9.3",
     "core-js": "^3.6.5",
     "firebase": "^7.15.1",
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
-    "vue-chartless": "^0.1.23",
+    "vue-chartjs": "^3.5.1",
     "vue-router": "^3.2.0",
     "vuetify": "^2.2.11",
     "vuex": "^3.4.0"
