--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
     "vue-chartjs": "^3.5.1",
+    "vue-loading-template": "^1.3.2",
     "vue-router": "^3.2.0",
     "vuetify": "^2.2.11",
     "vuex": "^3.4.0"
